Fixed Overflow iPhone issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-body {
+body, html {
   background-color: var(--bs-light);
   overflow-x: hidden;
   font-family: Jost;
